# ISLR-Answers-Python-R

./: .gitignore
conceptual/: 03_linear_regression.md  04_classification.md  05_resampling_methods.md
python/: pyproject.toml
r/: 02_statistical_learning.Rmd  03_linear_regression.Rmd  04_classification.Rmd  05_resampling_methods.Rmd
