[tool.poetry]
name = "islr"
version = "0.1.0"
description = ""
authors = ["Julen Pardo <julen.pardo@outlook.es>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
pandas = "^1.2.3"
seaborn = "^0.11.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
